tests/error/alias_errors/too_many_args.err
Error: Too many type arguments (at $FILE:18:12)
   | 
16 | 
17 | @guppy
18 | def main(b: BoxAlias[int, bool]) -> int:  # Too many type args: BoxAlias takes 1
   |             ^^^^^^^^^^^^^^^^^^^ Unexpected type argument for type `BoxAlias` (expected 1,
   |                                 got 2)

Guppy compilation failed due to 1 previous error
